2001-12-04  Alex Larsson  <alexl@redhat.com>

	* gen_util/GNOME_GenUtilApplet_Factory.server.in.in:
	* gen_util/tasklist.[ch]:
	* applets/gen_util/Makefile.am:
	New tasklist implementation using libwnck.

	* applets/gen_util/pager.c:
	Fixed copyright

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* gen_util/clock.c: (make_clock_applet): update for
	applet api changes.

	* gen_util/pager.c: (make_pager_applet): ditto.

2001-11-27  Mark McLoughlin  <mark@skynet.ie>

	* gen_util/Makefile.am: build against ../../libpanel-applet.

2001-11-26  Mark McLoughlin  <mark@skynet.ie>

	* Makefile.am: add desk-guide to SUBDIRS.

	* gen_util/Makefile.am: add
	  GNOME_GenUtilApplet_Factory.server.in.in to EXTRA_DIST.

2001-11-23  Mark McLoughlin  <mark@skynet.ie>

	* gen_util/GNOME_GenUtilApplet_Factory.server.in.in: add
	"panel:icon" and "panel:category" attributes.

2001-11-23  Alexander Larsson  <alla@lysator.liu.se>

        * Makefile.am:
	Build gen_util

	* gen_util/Makefile.am:
	* gen_util/clock.[ch]: 
	* gen_util/main.c:
	Convert to new applet API and gnome 2.

	* gen_util/GNOME_GenUtilApplet_Factory.server.in.in:
	New oaf file for the applets.

2001-10-17  Kjartan Maraas  <kmaraas@gnome.org>

	* gen_util/clock_applet.desktop: Use gnome-clock.png as icon.
	Patch from Red Hat.
	
2001-08-14  Kjartan Maraas  <kmaraas@gnome.org>

	* */*.sgml: Fix up the sgml a bit.
	
2001-08-03  Abel Cheung  <maddog@linux.org.hk>

	* */*.{soundlist,desktop,directory} : Reviewed/Modified/Added
	  traditional Chinese strings.

2001-08-02  Kjartan Maraas  <kmaraas@gnome.org>

	* */*.[desktop,soundlist]: Added nynorsk.
	
2001-07-17  jacob berkman  <jacob@ximian.com>

	* gen_util/popcheck.c (imap_check): make this actually compile and
	have some sane indenting and stuff.

	it amazes me that this code got in and stuff.

Wed Jul 11 14:23:39 2001  George Lebl <jirka@5z.com>

	* gen_util/popcheck.c: apply and massage patch from Jon Bowman