@@ -1,3 +1,8 @@
+2001-12-08  Richard Hult  <rhult@codefactory.se>
+
+	* gen_util/clock.c (computer_clock_update_func): Convert time/date
+	string to utf-8 before setting the label text.
+
 2001-12-04  Alex Larsson  <alexl@redhat.com>
 
 	* gen_util/GNOME_GenUtilApplet_Factory.server.in.in:
